chore: Adding laravel sanctum middleware for auth token generation and validation
